2009-04-04  Hans Breuer  <hans@breuer.org>

	* app/interface.c : don't translate g_warning
	* lib/sheet.c : fix typo in translatebale string

2009-03-31  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/wdeps.py : tinting of nodes now working as intended
	(also on windows)
	* samples/Self/dia-win32-2.dot samples/Self/dia-win32-2.dia : sample
	dependency graph with instructions

2009-03-30  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/wdeps.py : implement another coloring theme, fix
	the previous tinting; allow to leave out C-Runtime on Linux, too
	* plug-ins/python/dot2dia.py : the assumption of every node name being
	in quotes broke with dia-linux.dot; now fixed and ...
	* samples/Self/dia-linux-2.dia : ... updated the diagram also with new
	colors and passing --remove-crt to wdeps.py
	

	* app/find.and-replace.c : ensure visibility of the object found
	* app/display.[ch](ddisp_present_object) : new function to move
	an object into view with minimum scrolling

2009-03-29  Hans Breuer  <hans@breuer.org>

	* app/app_procs.c : slightly hacked version to avoid double request
	of "Exit without save" for integrated UI case, bug #573635

	* app/display.c : the interactive cairo renderer has highlighting 
	issues (bug #576548). For now default to the libart renderer for
	the antialiased display renderer (only fall back to cairo if the
	libart plug-in is not loaded)
	* plug-ins/libart/dialibartrenderer : initialize 
	DiaRenderer::is_interactive to allow entering text edit mode

	* app/display.h : increased the arbitrary zoom limits to make my 
	current stress test diagram fit

	* plug-ins/python/wdeps.py : my dependency analysis script is finally 
	running on Linux and together with dot can produce pretty nice images
	(last change was the introduction of tinting by layer)
	* samples/Self/dia-linux-2.dia : dependency graph of Dia
	* samples/Self/dia-linux-2.dot : dot file produced by wdeps.py and
	preocessed by dot

2009-03-28  Hans Breuer  <hans@breuer.org>
